--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,29 +27,31 @@ dependencies:
     sdk: flutter  
     
   cupertino_icons: ^1.0.2
-  rxdart: ^0.21.0
-  http:
-  flutter_plugin_pdf_viewer: ^1.0.7
-  shared_preferences: ^0.5.2
+  rxdart: ^0.23.0
+  http: 0.13.1
+  flutter_pdfview: ^1.0.4
+  #flutter_plugin_pdf_viewer: ^1.0.7
+  shared_preferences: ^2.0.5
   modal_progress_hud: ^0.1.3
   bubble_tab_indicator: ^0.1.4
-  pull_to_refresh: ^1.5.7
+  pull_to_refresh: ^2.0.0
   url_launcher: ^6.0.3
-  connectivity: ^0.4.8+6
+  connectivity: ^3.0.3
   # webview_flutter: ^0.3.22+1
-  firebase_messaging: ^6.0.16
+  firebase_core: 1.2.0
+  firebase_messaging: ^10.0.0
   flushbar: ^1.10.4
-  sqflite: ^1.3.1
-  path_provider: ^1.1.0
-  google_maps_flutter: ^0.5.28+1
-  location: ^3.0.2
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.1
+  google_maps_flutter: ^2.0.4
+  location: ^4.1.1
   webview_flutter: ^2.0.4
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1 
+  flutter_launcher_icons: ^0.9.0
 
 flutter_icons:
   android: "launcher_icon" 
